added some kv seq-ing to checksum indexes